--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 PORT=8001
 NODE_ENV=production
 SECRET_JWT="linling"
-DB=mongodb+srv://Adamk:FunctionhidepasswordAdamK32001@mycluster.8qr9m.mongodb.net/
+DB=mongodb+srv://Adamk:FunctionhidepasswordAdamK32001@mycluster.8qr9m.mongodb.net/crm
